Adicionado parse args.

--- a/TP/Makefile
+++ b/TP/Makefile
@@ -63,5 +63,5 @@ $(OBJ_FOLDER)%.o: $(SRC_FOLDER)%.cpp
 	$(CC) $(CXXFLAGS) -c $< -o $@ -I$(INCLUDE_FOLDER)
 
 run: $(EXE)
-	$(EXE) -I entrada.txt -O saida.txt -m 5 -s 10 -p /tmp/testlog.out
+	$(EXE) -i entrada.txt -o saida.txt -p /tmp/runlog.out
 
